<resources>
    <string name="app_name">RxAndMore</string>
    <string name="refresh">Refresh</string>
    <string name="greetings">Greetings! This App would serve sample to everything Rx..</string>
    <string name="lbl_form_checks">Form Checks</string>
    <string name="lbl_pattern">Pattern</string>
    <string name="pattern_with_rx">Pattern using Rx!</string>
    <string name="progress_pattern_example">Progress pattern example:</string>
    <string name="cap_start"><![CDATA[<]]></string>
    <string name="cap_end"><![CDATA[/>]]></string>
    <string name="mobile_number">Mobile Number</string>
    <string name="pin_code">Pincode</string>
    <string name="email_id">Email ID</string>
    <string name="submit_caps">SUBMIT</string>
    <string name="block">block</string>
    <string name="game">Game</string>
    <string name="o">O</string>
    <string name="x">X</string>
    <string name="won">won</string>
    <string name="proceed_message">Play again or Quit?</string>
    <string name="quit">Quit</string>
    <string name="proceed">Proceed</string>
    <string name="start_game">Start Game</string>
    <string name="enter_player_names">Enter player names</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="enter_valid_name">Enter valid names!</string>
    <string name="game_over">Game Over</string>
    <string name="ok_caps">OK</string>
    <string name="play_again">Play Again?</string>
    <string name="tie">It\'s a tie!</string>
    <string name="x_placeholder">[X] :</string>
    <string name="o_placeholder">[O] :</string>
    <string name="lbl_tic_tac_toe">Tick-Tack-Gone…</string>
    <string name="lbl_about_dev">About Developer</string>
    <string name="designed_by">Designed and Developed by</string>
    <string name="yash">Yash Joshi</string>
    <string name="drop_a_mail">Reach me</string>
    <string name="linked_in">linked_in</string>
    <string name="git_hub">git_hub</string>
    <string name="stack_over_flow">stack_over_flow</string>
    <string name="send_email">Send email…</string>
    <string name="quit_game">Quit Game</string>
</resources>
