<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.AboutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/designed_by"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="italic" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/yash"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_40"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLinkedIn"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ripple_transparent"
            android:contentDescription="@string/linked_in"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:src="@drawable/linked_in" />

        <ImageView
            android:id="@+id/ivGitHub"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/ripple_transparent"
            android:contentDescription="@string/git_hub"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:src="@drawable/github" />

        <ImageView
            android:id="@+id/ivStackOverFlow"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_gravity="center"
            android:background="@drawable/ripple_transparent"
            android:contentDescription="@string/stack_over_flow"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:src="@drawable/stack_overflow" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivMailMe"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/ripple_transparent"
        android:contentDescription="@string/drop_a_mail"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:src="@drawable/email_edit_outline" />

</LinearLayout>