<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:elevation="@dimen/dp_4"
        android:inputType="textPassword"
        app:title="@string/enter_player_names"
        app:titleTextColor="@color/white" />

    <EditText
        android:id="@+id/etPlayer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_80"
        android:layout_marginBottom="@dimen/dp_8"
        android:background="@drawable/rect_box"
        android:gravity="center"
        android:hint="@string/player_1"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/etPlayer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_80"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_80"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/rect_box"
        android:gravity="center"
        android:hint="@string/player_2"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:padding="8dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvStartGame"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_12"
        android:background="@drawable/ripple_button"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/start_game"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvQuitGame"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/ripple_button"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/quit_game"
        android:textColor="@color/black" />
</LinearLayout>