<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.FormChecksActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_4"
        android:layout_marginTop="@dimen/dp_18"
        android:layout_marginBottom="@dimen/dp_8"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@+id/etMobileNumber"
            android:padding="@dimen/dp_4"
            android:text="@string/mobile_number" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_weight="1"
            android:background="@drawable/rect_box"
            android:inputType="number"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_4"
        android:layout_marginBottom="@dimen/dp_8"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@+id/etPinCode"
            android:padding="@dimen/dp_4"
            android:text="@string/pin_code" />

        <EditText
            android:id="@+id/etPinCode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_weight="1"
            android:background="@drawable/rect_box"
            android:inputType="number"
            tools:ignore="Autofill" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_4"
        android:layout_marginBottom="@dimen/dp_8"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:labelFor="@+id/etEmailId"
            android:padding="@dimen/dp_4"
            android:text="@string/email_id" />

        <EditText
            android:id="@+id/etEmailId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_46"
            android:layout_weight="1"
            android:background="@drawable/rect_box"
            android:inputType="textEmailAddress"
            tools:ignore="Autofill" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@drawable/inner_submit_buttons"
        android:text="@string/submit_caps"/>

</LinearLayout>