<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_4"
        android:gravity="center"
        android:paddingHorizontal="@dimen/dp_8"
        android:text="@string/progress_pattern_example"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_8"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_8">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cap_start"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:id="@+id/tvPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_weight="5"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dp_8"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cap_end"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24" />
    </LinearLayout>
</LinearLayout>