<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnPattern"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ripple_button"
        android:elevation="@dimen/dp_8"
        android:text="@string/pattern_with_rx"
        android:textColor="@color/black"
        android:translationZ="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionBanner" />

    <Button
        android:id="@+id/btnGame"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ripple_button"
        android:elevation="@dimen/dp_8"
        android:text="@string/game"
        android:textColor="@color/black"
        android:translationZ="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPattern" />

    <TextView
        android:id="@+id/tvDescriptionBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_16"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="@string/greetings"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--<Button
        android:id="@+id/btnFormChecks"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ripple_button"
        android:elevation="@dimen/dp_8"
        android:text="@string/lbl_form_checks"
        android:textColor="@color/black"
        android:translationZ="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionBanner" />-->

</androidx.constraintlayout.widget.ConstraintLayout>