<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/dp_32"
    android:layout_marginBottom="@dimen/dp_32"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.game.TicTacToe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/x_placeholder"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPlayer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2"
        android:layout_marginBottom="@dimen/dp_10"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/o_placeholder"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPlayer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textSize="@dimen/sp_20" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/a1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/block"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowDx="13"
            android:shadowDy="8"
            android:shadowRadius="12"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_100"
            android:textStyle="bold"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/a2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/block"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowDx="13"
            android:shadowDy="8"
            android:shadowRadius="12"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_100"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/a3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/block"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowDx="13"
            android:shadowDy="8"
            android:shadowRadius="12"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_100"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/b1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/block"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowDx="13"
            android:shadowDy="8"
            android:shadowRadius="12"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_100"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/b2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/block"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowDx="13"
            android:shadowDy="8"
            android:shadowRadius="12"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_100"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/b3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/block"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowDx="13"
            android:shadowDy="8"
            android:shadowRadius="12"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_100"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/c1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/block"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowDx="13"
            android:shadowDy="8"
            android:shadowRadius="12"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_100"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/c2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/block"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowDx="13"
            android:shadowDy="8"
            android:shadowRadius="12"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_100"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/c3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:contentDescription="@string/block"
            android:gravity="center"
            android:shadowColor="@color/grey"
            android:shadowDx="13"
            android:shadowDy="8"
            android:shadowRadius="12"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_100"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTurnIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_24"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="italic" />

</LinearLayout>